--- a/javaScript/html_js.html
+++ b/javaScript/html_js.html
@@ -10,12 +10,17 @@
 </head>
 <body>
 <link rel="shortcut icon" href="http://ditto.ua/wa-data/public/shop/themes/ditto/images/favicon.ico">
-<script src="js.js">
+        <script src="js.js">
     alert(1); // так как указан src, то внутренняя часть тега игнорируется
 </script>
 
 
 чсм
+gd
+dfg
+ df
+ fd
+ fd
 
 </body>
 </html>
